--- a/MessengerApp/app/src/main/AndroidManifest.xml
+++ b/MessengerApp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="com.message.messengerapp.MyApplication"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,11 +17,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="31">
+
         <activity
-            android:name="com.message.messengerapp.MessageChatActivity"
+            android:name=".ViewFullImageActivity"
             android:exported="false" />
         <activity
-            android:name="com.message.messengerapp.WelcomeActivity"
+            android:name=".MessageChatActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WelcomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,14 +34,31 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.message.messengerapp.LoginActivity"
+            android:name=".LoginActivity"
             android:exported="false" />
         <activity
-            android:name="com.message.messengerapp.RegisterActivity"
+            android:name=".RegisterActivity"
             android:exported="false" />
         <activity
-            android:name="com.message.messengerapp.MainActivity"
-            android:exported="true"></activity>
+            android:name=".MainActivity"
+            android:exported="true" />
+
+        <service
+            android:name=".Notification.MyFirebaseMessaging"
+            android:exported="true"
+            tools:ignore="Instantiatable">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".Notification.MyFirebaseInstanceId"
+            android:exported="true"
+            tools:ignore="Instantiatable,MissingClass">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
